gitops/apps/example-app-1/strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: example-app-1-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /app1
