gitops/apps/example-app-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-1
  labels:
    app.kubernetes.io/name: example-app-1
    app.kubernetes.io/instance: example-app-1
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: appme-platform
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/hook: Sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-1
  template:
    metadata:
      labels:
        app: example-app-1
        app.kubernetes.io/name: example-app-1
        app.kubernetes.io/instance: example-app-1
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: appme-platform
    spec:
      containers:
      - name: example-app-1
        image: docker.io/morawskioz/example-app-1:0.0.1
        ports:
        - containerPort: 8080
