gitops/apps/example-app-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-1
spec:
  type: ClusterIP
  selector:
    app: example-app-1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
