gitops/apps/example-app-1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: example-app-1
  labels:
    app.kubernetes.io/name: example-app-1
    app.kubernetes.io/instance: example-app-1
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: appme-platform
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`k8s.appunow.com`) && PathPrefix(`/app1`)
    kind: Rule
    middlewares:
    - name: example-app-1-stripprefix
    services:
    - name: example-app-1
      port: 80
